# devel

./: .gitmodules  ChangeLog.md  README.md
cont/: contEffects.hs  transient.cont.hs  transient.cont1.hs
develold/: devel.cabal
develold/CloudSync/: CloudSync.cabal
develold/CloudSync/src/: CloudSync.hs  DistribUtils.hs  EventSourcing.hs  Main.hs
develold/FreeChooser/: Votes.hs
develold/IDynamic/: IDynamic.cabal  sample.hs
develold/IDynamic/Data/: IDynamic.hs  IResource.hs
develold/Memoization/: CachedFunc.hs  Copia de Transient.hs  Transient.cabal  Transient.hs  testCacheFunc.hs
develold/Mumath/: Mumath.hs  TypesAlacarte.hs  TypesAlacarte.lhs  dynalgebra.hs
develold/Prototype/: IDynamic.hs  Prototype.hs
develold/Pulp/: Pulp.hs  Test.hs
develold/Serialize-0.1/: Serialize.cabal  Token.hs  pr.hs  pr2.hs
develold/Serialize-0.1/Data/: RefSerialize.hs  Serialize.hs
develold/Serialize-0.1/Data/Serialize/: Parser.hs
develold/TraceT/: TraceT.cabal
develold/TraceT/Debug/: TraceT.hs
develold/chat/: Chat.hs  WebServer.hs
develold/cluster/Cluster00/: Cluster.hs  ClusterTCache.hs  Main.hs  ProtocolHTTP.hs  test.hs
develold/cluster/Cluster00/Cluster/: Debug.hs
develold/cluster/cluster-0.0/: Cluster.hs  ClusterTCache.hs  Main.hs  Main2.hs  ProtocolHTTP.hs
develold/cluster/cluster-0.1/: URIHold.hs
develold/cluster/cluster-0.1/main/: Main.hs
develold/cluster/cluster-0.10/: Cluster.hs  ClusterTCache.hs  Main.hs  Simulator.hs
develold/cluster/cluster-0.11/: Cluster.hs  ClusterTCache.hs  Main.hs  ProtocolHTTP.hs
develold/cluster/cluster-0.2/: Cluster.hs  ClusterTCache.hs  ProtocolHTTP.hs  Transaction.hs
develold/cluster/cluster-0.20 sync ok problemas lock/: Cluster.hs  ClusterTCache.hs  Main.hs  Protocol.hs  ProtocolHTTP.hs  Transaction.hs
develold/cluster/cluster-0.3/: Cluster.hs  ClusterTCache.hs  ProtocolHTTP.hs
develold/cluster/cluster-0.3.4/: Cluster.hs  ClusterTCache.hs  Main.hs  Transaction.hs
develold/cluster/cluster-0.3.5/: Cluster.cabal  Cluster.hs  ClusterTCache.hs  Main.hs  ProtocolHTTP.hs  URIHold.hs
develold/cluster/cluster-0.3/main/: Main.hs
develold/cluster/cluster-0.3/main2/: Main2.hs
develold/csv/: cursos.hs
develold/csv/encuestas/: encuestas.hs  encuestas.old.hs
develold/csv/ideas/: ideas.hs
develold/cvt/: cvt.cabal
develold/cvt/app/: Main.hs
develold/ffdemocracy/: Main.hs
develold/genetic/: Genetic.hs
develold/hspx/: xml.hs
develold/nikita/: simpleMDE.hs
develold/properties/properties-0.0.2/: example.hs  example2.hs  properties.cabal
develold/properties/properties-0.0.3/: example2.hs  properties.cabal
develold/stuff/testService2/: testService.cabal  testService.hs  testserviceclient.hs  testserviceexe.hs
develold/tcache-AWS/: tcache-AWS.cabal
develold/tcache-AWS/src/Data/TCache/: AWS.hs
develold/votes/: Votes.cabal
develold/votes/src/: Aprobal.hs  Conf.hs  ConfDefs.hs  Data.hs  FreeChooser.hs  HTTPParser.hs  Help.hs  Init.hs  Pages.hs  ReadFile.hs  Search.hs  TCache.hs  UtilHTML.hs  Vote.hs  VotesH.hs  WebServer.hs  hsWebServer.hs
develold/votes/src/data/: DefaultConstitution.hs
develold/votes/src/unused/: Pages.hs  PagesTitle.hs  Parameter.hs  Sched.hs  TCache1.hs  TCache2.hs  Table.hs  WebObject.hs
develold/votes/src/unused/tests/: Data.hs  DefaultConstitution.hs  MTS.hs  Strict.hs  Test.hs  eval.hs  load.hs  menu.hs
develold/votesWorkflow/: ControlWorkflow.hs  Data.hs  Votes.cabal
develold/votesWorkflow/src/: Aprobal.hs  CGI2.hs  FreeChooser.hs  HTTPParser.hs  HTTPParser2.hs  Help.hs  Init.hs  Lang.hs  Pages.hs  Test.hs  TestSched.hs  UtilHTML.hs  VCache.hs  Vote.hs  VotesH.hs  WebServer.hs  WorkflowElem.hs  cleanrun.hs  hsWebServer.hs  load.hs
develold/votesWorkflow/src/data/: DefaultConstitution.hs
develold/votesWorkflow/src/unused/: Conf.hs  ConfDefs.hs  DynModule.hs  Lambda.hs  ReadFile.hs  Schedtable.hs  Search.hs  VParameters.hs  WebObjVotes.hs  load.hs
develold/votesWorkflow/src/unused/tests/: Aprobal.hs  CGI.hs  ConfDefs.hs  Data.hs  HTTPParser.hs  Hsp.hs  Include.hs  Init.hs  Lang.hs  LangEs.hs  MonadWF.hs  Pages.hs  TCache.hs  TestLambda.hs  TestLambdaMain.hs  TestServer.hs  UtilHTML.hs  VCache.hs  Vote.hs  WebServer.hs  Workflow.hs  Workflow2.hs  eval.hs  load.hs  read.hs
fotos/: fotos.cabal  fotos.hs
tltransient/app/: Main.hs  Main2.hs  Main3.hs  Main4.hs
