name: fotos
version: 0.1.0.0
build-type: Simple
license: UnspecifiedLicense
maintainer: agocorona@gmail.com
author: Alberto G. Corona

executable fotos
    main-is: fotos.hs
    build-depends:
        base >=4.8 && <4.10,
        transient-universe -any,
        axiom -any,
        transient -any,
        transformers -any,
        directory >=1.2.2.0 && <1.3
    default-language: Haskell2010
    hs-source-dirs: .

